--- a/Changes
+++ b/Changes
@@ -3,3 +3,6 @@ Revision history for PDF-TableX
 0.01    14.05.2013
         First version, released on an unsuspecting world.
 
+0.011		14.05.2013
+    		Fixed POD
+
